# skald-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  basic_usage.py  chat_example.py  generate_doc_example.py  search_example.py
skald_sdk/: __init__.py  client.py  types.py
tests/: __init__.py  test_client.py
